fixing footer size on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -283,7 +283,12 @@ a i.icon-twitter-sign {
   -webkit-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.1);
   box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.1);
-  height: 110px;
+}
+@media (min-width: 768px) {
+  /* line 63, ../sass/_element.scss */
+  .footer-ty {
+    height: 110px;
+  }
 }
 
 /* line 71, ../sass/_element.scss */
