--- a/sass/_element.scss
+++ b/sass/_element.scss
@@ -65,7 +65,7 @@
 	background: #FFF;
 	border-top: 1px solid rgba(#000, .2);
 	@include box-shadow(0px -1px 2px rgba(#000, .1));
-	height: 110px;
+	@include breakpoint($desktop) {height: 110px;}
 }
 
 .ftr-right,
